# zeno-app

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: deploy-api.yml  pr-check.yml
api/: .env.example  .gitignore  README.md  TERRAFORM.md  jest.config.js  package.json  serverless.yml  tsconfig.json
api/scripts/: bundle.js
api/src/handlers/: analysis.ts  auth.ts
api/src/middleware/: rateLimit.ts
api/src/utils/: otp.ts  (+5 more)
api/terraform/: .gitignore  api_gateway.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  terraform.tfvars.example
api/tests/: integration.test.ts
backend/: break_logger.py  breathing_logger.py  calibration_status.py  camera_manager.py  clear_data.py  db_schema.py  emotion_analyzer.py  emotion_analyzer_hsemotion.py  exercise_logger.py  export_csv.py  focus_stream.py  gesture_dismissal.py  passive_checkin.py  posture_analyzer.py  posture_stream.py  presence_check.py  presence_detector.py  report_aggregator.py  requirements.txt  respiratory_analyzer.py  rppg_estimator.py  seed_dummy_sessions.py  session_history.py  session_notification.py  session_runner.py  settings_store.py  sqlite_logger.py  stress_analyzer.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: henry.w@example.net  icon.icns
frontend/src-tauri/src/: commands.rs  main.rs  notifications.rs  python_sidecar.rs  schedulers.rs  state.rs
scripts/: dev.sh
(+81 files in other folders)
