[package]
name = "zeno"
version = "1.0.0"
description = "Zeno local focus and wellness companion"
authors = ["Zeno contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
